--- a/templates/scanner/scanner_public.html
+++ b/templates/scanner/scanner_public.html
@@ -824,7 +824,9 @@
                         lead_name: leadName,
                         lead_email: leadEmail,
                         lead_company: leadCompany,
-                        lead_phone: leadPhone
+                        lead_phone: leadPhone,
+                        industry: document.getElementById('industry').value,
+                        company_size: document.getElementById('company-size').value
                     };
                     
                     // Submit to server
