--- a/templates/client/scan_report.html
+++ b/templates/client/scan_report.html
@@ -1072,7 +1072,7 @@
                     <div class="row">
                         <div class="col-md-6">
                             <h6>MTA-STS</h6>
-                            {% if scan.results.email_security.email_security.mta_sts %}
+                            {% if scan.results.email_security.mta_sts %}
                                 <span class="badge bg-success">Configured</span>
                                 <p class="small text-muted mt-1">Enforces TLS for email delivery</p>
                             {% else %}
@@ -1082,7 +1082,7 @@
                         </div>
                         <div class="col-md-6">
                             <h6>BIMI</h6>
-                            {% if scan.results.email_security.email_security.bimi %}
+                            {% if scan.results.email_security.bimi %}
                                 <span class="badge bg-success">Configured</span>
                                 <p class="small text-muted mt-1">Brand indicators for message identification</p>
                             {% else %}
